src/objects/Credit__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Credits</relationshipLabel>
        <relationshipName>Credits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Credit date</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fully_repaid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fully repaid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Type</label>
        <referenceTo>Type_of_credit__c</referenceTo>
        <relationshipLabel>Credits</relationshipLabel>
        <relationshipName>Credits</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Credit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Credit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>